# CS6533

./: .gitignore  note.xoj
3d_models/Monk_Giveaway/: Monk_Giveaway.FBX  Monk_Giveaway.max  Monk_Giveaway.mtl  Monk_Giveaway_Conditions.txt  Monk_Giveaway_Fixed.mtl  Monk_N_Normal_Bump.tga
template/linux/: .ycm_extra_conf.py  CMakeLists.txt  Makefile  glsupport.cpp  glsupport.h  main.cpp  matrix4.h  template  vertex_textured.glsl
template/mac/TemplateProject/: geometrymaker.h  main.cpp
template/mac/TemplateProject.xcodeproj/: project.pbxproj
template/mac/TemplateProject.xcodeproj/project.xcworkspace/xcuserdata/ivansafrin.xcuserdatad/: UserInterfaceState.xcuserstate
template/mac/TemplateProject.xcodeproj/xcuserdata/ivansafrin.xcuserdatad/xcschemes/: TemplateProject.xcscheme  xcschememanagement.plist
template/windows/: TemplateProject.sln  TemplateProject.vcxproj  TemplateProject.vcxproj.filters  glsupport.cpp  main.cpp  quat.h
